@@ -1,5 +1,11 @@
 2007-10-16  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/eap-method-leap.c
+		- (show_toggled_cb, eap_method_leap_new): hook up "Show Password"
+			checkbox
+
+2007-10-16  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.glade
 		- Add EAP-LEAP widget
 
